[build-system]
requires = [
    "hatchling",
]
build-backend="hatchling.build"

[project]
name = "sturgeon"
version = "0.2.1"
authors = [
    { name="Marc Pagès-Gallego" },
    { name="Carlo Vermeulen" },
]
description = "CNS classifier"
readme = "README.md"
requires-python = ">=3.7, <=3.8"
dependencies = [
    "numpy>=1.21.5",
    "pandas>=1.3.0",
    "matplotlib==3.5.1",
    "onnxruntime==1.12.1",
    "pysam==0.20.0",
    "modbampy==0.6.3",
]

[project.urls]
"Homepage" = "https://github.com/marcpaga/sturgeon"
"Bug Tracker" = "https://github.com/marcpaga/sturgeon/issues"

[project.scripts]
sturgeon = "sturgeon.main:run"

[project.optional-dependencies]
build = [
    'nuitka==1.2.0'
]

[options.package_data]
sturgeon = "include/*"

