[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sturgeon"
version = "0.5.1"
authors = [{ name = "Marc Pagès-Gallego" }, { name = "Carlo Vermeulen" }]
description = "CNS classifier"
readme = "README.md"
requires-python = ">=3.7, <3.10"
dependencies = [
    "numpy>=1.21.5, <2",
    "pandas>=1.3.0",
    "matplotlib==3.5.1",
    "onnxruntime==1.12.1",
    "pysam==0.19.0",
    "modbampy==0.6.3",
]

[project.urls]
"Homepage" = "https://github.com/marcpaga/sturgeon"
"Bug Tracker" = "https://github.com/marcpaga/sturgeon/issues"

[project.scripts]
sturgeon = "sturgeon.main:run"

[options.package_data]
sturgeon = "include/*"
